# grid2demand

./: .gitignore  .pylintrc  Copy_of_grid2demand.ipynb  MANIFEST.in  README.md  README_pkg.md  README_pypi.md  TODO.md  demand.csv  gd_te.py  grid2demand.ipynb  grid2demand_request2.vsdx  grid2demand_tutorial.ipynb  grid2demand_tutorial.py  grid2demand_tutorial_use_zone_in_nodeCSV.py  grid2demand_tutorial_user_TAZ.py  node.csv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test_gd.py  ~$README.md
.github/workflows/: build_wheels.yml  pylint.yml  pytest.yml  pytest_310.yml  python-package.yml
.ipynb_checkpoints/: grid2demand_tutorial-checkpoint.ipynb
dataset/ASU/: accessibility.csv  asu_parcels.qmd  connector.csv  demand.csv  ggis_GMNS.qgz  log.txt  node.csv  poi.csv  poi_trip_rate.csv  zone.csv
dataset/Avondale_AZ/: node.csv
dataset/CollegePark/: accessibility.csv  demand.csv  node.csv  poi.csv  poi_trip_rate.csv  zone.csv
dataset/DC_Downtown/: link.csv  log.txt
dataset/DCdowntown/: accessibility.csv  demand.csv  node.csv  poi.csv  poi_trip_rate.csv  zone.csv
dataset/NationalArboretum/: log.txt  node.csv  poi_trip_rate.csv
dataset/UMD/: log.txt
datasets/ASU/: TAZ.csv  accessibility.csv  asu_parcels.csv  input_agent.csv  poi_trip_rate.csv
datasets/Avondale_AZ/: node.csv  zone.csv
datasets/Chicago_13K_nodes/: link.csv  node.csv
datasets/Chicago_30K_nodes/auto/: node.csv
datasets/DC_Downtown/: accessibility.csv  node.csv  poi.csv  poi_trip_rate.csv  zone.csv
datasets/Lima_Network/: settings.yml
datasets/NationalArboretum/: accessibility.csv  demand.csv
datasets/Sioux_Falls/: demand.csv  node.csv  zone.csv
datasets/Tuscon_zone/: link.csv  link_performance_summary.csv  node.csv  node_synced.csv  zone.csv  zone_synced.csv
datasets/UMD/: link.csv  node.csv  poi_trip_rate.csv  zone.csv
datasets/demand_from_ zone_id_in_node/SF_demo/: settings.yml
datasets/demand_from_TAZ/: node.csv
datasets/demand_from_TAZ/Avondale_AZ/: zone.csv
datasets/demand_from_TAZ/SF/: demand(2).csv  demand.csv  link.csv  node(1).csv  node.csv  zone(1).csv  zone.csv
datasets/demand_from_TAZ/SF_demo/: agent.csv  link_performance.csv  node - Copy (2).csv  node - Copy.csv  node.csv
datasets/demand_from_TAZ/Sioux_Falls/: demand.csv  node.csv  zone.csv
datasets/demand_from_grid/DC_Downtown/: demand.csv  node.csv
datasets/demand_from_grid/NationalArboretum/: zone.csv
datasets/demand_from_grid/UMD/: demand.csv
datasets/dubai/: demand.csv  node.csv  poi.csv  zone.csv
doc/: GRID2DEMAND_UserGuide_0109a.doc  user guide.docx  user guide_pic.docx  user_guide.doc  user_guide.docx  ~$er guide_pic.docx  ~WRL0003.tmp
doc/example_1/: accessibility.csv  demand.csv  ggis_GMNS.qgz  log.txt  node.csv  poi.csv  streamlined_workflow.ipynb  test_gd.py
docs/: TAZ_preparation.docx  grid2demand.ipynb  grid2demand.py  part-1_grid2demand.pptx  user_guide.docx
docs/example_1/: link.csv  poi_trip_rate.csv
examples/: accessibility.csv  complex_intersection.csv  demand.csv  grid2demand_0202a.py  grid2demand_0202b.py  input_agent.csv  integration.ipynb  link.csv  log.txt  node.csv  poi.csv  poi_trip_rate.csv  segment.csv  streamlined_workflow.ipynb  test_gd.py  zone.csv
examples/data_folder/: accessibility.csv  demand.csv  link.csv  node.csv  poi.csv  poi_trip_rate.csv  zone.csv
grid2demand/: __init__.py  _grid2demand.py  func_lib.py  grid2demand.py  old_xl.py  utils_lib.py
grid2demand/func_lib/: __init__.py  gen_agent_demand.py  gen_poi_trip_rate.py  gen_zone.py  gravity_model.py  read_node_poi.py  trip_rate_production_attraction.py
grid2demand/gridmapping/: gridmapping.py  step1_grid.csv  step2_grid_od.csv  step3_node_grid.csv
grid2demand/tes/: grid2demand.py
grid2demand/utils_lib/: net_utils.py  pkg_settings.py  utils.py
src/: When pandas meets GMNS.ipynb  __init__.py  demand_to_abst_scenario.py  grid2demand.py  grid2demand_0106a.py  grid2demand_0109a.py  grid2demand_0117a.py  grid2demand_0118c.py  grid2demand_lite_v1.ipynb
tests/: test_read_node.py
tutorial/: Colab SF_Example.ipynb  SF_Example.ipynb  demand_from_TAZ.py  demand_from_external_TAZ_or_zone.py  demand_from_grid_detailed.py  demand_from_grid_simple.py  demand_from_node_include_zone_id.py  demand_from_node_poi_detailed.ipynb  demand_from_node_poi_detailed.py  demand_from_node_poi_simple.py  demand_from_node_poi_with_zone_id.py  demand_from_zone_id_in_node.py  grid2demand_tutorial.ipynb
(+20 files in other folders)
